--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   lottie: ^3.2.0
   dot_navigation_bar: ^1.0.2
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
