--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^3.2.0
   dot_navigation_bar: ^1.0.2
   sqflite: ^2.4.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
